Updated custom fonts

--- a/index.html
+++ b/index.html
@@ -21,27 +21,28 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-primary" type="submit">Search</button>
+          <button class="btn" type="submit">Search</button>
         </form>
       </div>
     </div>
   </nav>
 <body>
-  <h1 class="text-center mt-5">Homepage</h1>
-  <div class="container mt-5">
-    <div class="form-floating">
-      <div class="col-xl-6 col-md-8 mb-5">
-        <form action="" class="card p-1 mb-5 bg-theme-bg-sec shadow">
-          <div class="d-flex flex-column gap-15">
-            <label for="FormControlTextarea" class="text-theme-text p-2 h3">Make new post</label>
+  <h1 class="text-center mt-5">What's New</h1>
+  <div class="container">
+    <div class="form-floating d-flex justify-content-center">
+      <div class="col-xl-6 col-md-8 mb-5 p-4">
+        <form action="" class="card bg-theme-bg-sec shadow p-2">
+          <div class="d-flex text flex-column gap-15 justify-content-center">
+            <label class="text-theme-text p-2 h3">Tell Us Whats' New</label>
             <textarea class="form-control" id="FormControlTextarea" rows="3"></textarea>
             <div class="d-flex justify-content-end">
-              <button class="btn btn-primary">Post</button>
+              <button class="btn">Post</button>
             </div>
           </div>
+        </form>
       </div>
     </div>
-    <div class="container mt-5">
+    <div class="container">
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col-xl-6 col-md-8 mb-5">
           <div class="card">
