--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success bg-light" type="submit">Search</button>
+          <button class="btn" type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -51,7 +51,7 @@
                       Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                     </div>
               </div>
-              <button type="submit" class="btn btn-primary">Login</button>
+              <button type="submit" class="btn">Login</button>
             </form>
         </div>
         <div class="col down">
