--- a/profile.html
+++ b/profile.html
@@ -20,8 +20,8 @@
           <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
         </ul>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-          <button class="btn btn-outline-success bg-light" type="submit">Search</button>
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn " type="submit">Search</button>
         </form>
       </div>
     </div>
@@ -48,15 +48,15 @@
             <div class="col-xl-6 col-md-8 mb-5">
               <form action="" class="card p-1 mb-5 bg-theme-bg-sec shadow">
                 <div class="d-flex flex-column gap-15">
-                  <label class="text-theme-text p-2 h3">Make new post</label>
+                  <label class="text p-2 h3">Tell Us Whats' New</label>
                   <textarea class="form-control" id="FormControlTextarea" rows="3"></textarea>
                   <div class="d-flex justify-content-end">
-                    <button class="btn btn-primary">Post</button>
+                    <button class="btn">Post</button>
                   </div>
                 </div>
               </form>
               <div class="d-flex flex-column gap-15" id="postedPosts">
-                <h3 class="mb-5">Recently posts</h3>
+                <h4 class="mb-5">Latest posts</h4>
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                   <div class="col-xl-12 col-md-8 mb-2">
                     <div class="card">
@@ -138,40 +138,40 @@
               <div class="container-fluid">
                 <div class="card shadow">
                   <div class="card-header">
-                    <h3>My contacts</h3>
+                    <h4>My contacts</h4>
                   </div>
                   <div class="contactlist">
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">John</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Seth</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Monja</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Chris</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Leif</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Peter</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Pete</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                     <div class="d-flex justify-content-between align-items-center gap-10">
                       <p class="names align-items-center m-2">Kim</p>
-                      <button class="btn btn-primary m-2">Message</button>
+                      <button class="btn m-2">Message</button>
                     </div>
                   </div>
                 </div>
