Updated new post container based on feedback

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <h1 class="text-center mt-5">What's New</h1>
   <div class="container">
     <div class="form-floating d-flex justify-content-center">
-      <div class="col-xl-6 col-md-8 mb-5 p-4">
-        <form action="" class="card bg-theme-bg-sec shadow p-2">
-          <div class="d-flex text flex-column gap-15 justify-content-center">
+      <div class="col col-md-8 mb-5 p-4">
+        <form action="" class="card bg-theme-bg-sec p-2">
+          <div class="d-flex text flex-column gap-15">
             <label class="text-theme-text p-2 h3">Tell Us Whats' New</label>
             <textarea class="form-control" id="FormControlTextarea" rows="3"></textarea>
             <div class="d-flex justify-content-end">
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="container">
-      <div class="row row-cols-1 row-cols-md-2 g-4">
+      <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-center">
         <div class="col-xl-6 col-md-8 mb-5">
           <div class="card">
             <div class="card-body">
