--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
   </nav>
   <body>
     <h1 class="text-center mt-5">Profile</h1>
-    <div class="container text-center mt-5">
+    <div class="container text-center mt-5 ">
       <div class="container-fluid d-flex">
         <div class="container-fluid">
           <div class="row">
@@ -46,7 +46,7 @@
               </div>
             </div>
             <div class="col-xl-6 col-md-8 mb-5">
-              <form action="" class="card p-1 mb-5 bg-theme-bg-sec shadow">
+              <form action="" class="card bg-theme-bg-sec p-2">
                 <div class="d-flex flex-column gap-15">
                   <label class="text p-2 h3">Tell Us Whats' New</label>
                   <textarea class="form-control" id="FormControlTextarea" rows="3"></textarea>
@@ -55,9 +55,9 @@
                   </div>
                 </div>
               </form>
-              <div class="d-flex flex-column gap-15" id="postedPosts">
-                <h4 class="mb-5">Latest posts</h4>
-                <div class="row row-cols-1 row-cols-md-2 g-4">
+              <div class="d-flex flex-column gap-15">
+                <h4 class="mb-1 p-4">Latest posts</h4>
+                <div class="row row-cols-1 row-cols-md-2 g-4 justify-content-center">
                   <div class="col-xl-12 col-md-8 mb-2">
                     <div class="card">
                       <div class="card-body">
@@ -135,7 +135,7 @@
             </div>
             <!-- Contacts field -->
             <div class="col-xl-3 col-md-6 mb-5">
-              <div class="container-fluid">
+              <div class="container">
                 <div class="card shadow">
                   <div class="card-header">
                     <h4>My contacts</h4>
